# DocQuery-rag-application

./: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.yaml
app/backend/: api_models.py  config_loader.py  config_models.py  logger_setup.py  main.py  metrics.py  middleware.py
app/backend/rag/: generation.py  ingest.py  models.py  retrieval.py  retry_config.py  utils.py
app/backend/storage/: chroma.py  gcs.py  models.py
app/templates/: base.html  index.html
app/templates/static/: app.js  styles.css
deployment/: Dockerfile  README-DockerCompose.md  README.md  deploy-strategy.md  deployment-guide.md  docker-guide.md
docs/: ARCHITECTURE.MD  CITING-FEATURE.md  INITIAL-IDEA.md  SKILL-embeddings-google.md  embeddings-gemini.md  gemini-models.md  observability-ideas.md
docs/TODO/: bucket-sync.md
docs/Tutorial/: Walktrough.md
docs/_old/: RUBRIC-DETAILS.md  prompt.md
docs/spec-details/: ARCHITECTURE.MD  INITIAL-IDEA.md  TASKS.MD
tests/: test_api_endpoints.py  test_api_integration.py  test_generation.py  test_rag_pipeline.py  test_storage_gcs.py  test_validation_models.py
