[project]
name = "control"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-cloud-storage>=3.4.1",
    "google-genai>=2.8.0",
    "jinja2>=3.1.6",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "pymupdf>=1.27.2.3",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"
