[project]
name = "control"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-cloud-storage>=3.4.1",
    "google-genai>=2.8.0",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"
